# linkbot-cxx-library

./: .gitmodules  CMakeLists.txt  README.md
examples/: movemotors.cpp
include/baromesh/: error.hpp  linkbot.h  linkbot.hpp
include/linkbot/: linkbot.h  linkbot.hpp  linkbotgroup.hpp
src/: clinkbot.cpp  clinkboti.cpp  clinkbotl.cpp  daemon-status.cpp  daemon-status.hpp  daemon.hpp  linkbot.c.cpp  linkbot.cpp  message.pb.cc  message.pb.h  robot-write-stream.hpp  websocketclient.hpp
tests/: CMakeLists.txt  accelerometer.cpp  lavalamp.cpp  plotting.cpp  safetyangles.cpp  speeddial.cpp  tcp.cpp  test_c.cpp  testcallbacks.cpp  testcallbacks2.cpp  testclinkbot.cpp  testclinkboti.cpp  testgroup.cpp  testmovement.cpp
